** Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
**
**   Official Website    : http://mangadmin.all-mag.de
** GoogleCode Website    : http://code.google.com/p/mangadmin/
** Subversion Repository : http://mangadmin.googlecode.com/svn/
**
************************************************************************************************************/

=CHANGELOG=

Rev. 10:
  - added lithuania translation, thanks to visagalis

Rev. 9:
  - upgraded MangAdmin's License to GPL v.3
  - applied GPL v.3 headers to nearly all MangAdmin files
  - added a more clearly format to this changelog now each lines maximum is 110 columns
  - updated finnish translation, thanks to Lone

Rev. 8:
  - added a speed-slider
  - several changes to FrameLib
  - fixes: 
    |- added DewDrop-2.0
    |- downgraded all Ace2 libraries to fit the interface version 20003 (2.0.12),
    |- there shouldn't popup any ace errors anymore (!)otherwise tell me
  
Rev. 7:
  - few bugs fixed
  - moved MangFrames.lua code into MangAdmin.lua to make the code more handy
  - flymode button defect, need to know getvalue of PLAYER_MOVEMENT_FLAGS, if exists
  - finally implemented language switcher, now translators can test their translations!
  
Rev. 6:
  - few changes to translations
  - removed MaNGOS .togglegm patch from Rev. 4 because it was rejected and won't be applied to 
    MaNGOS svn, for details look here: http://www.mangosproject.org/forum/index.php?showtopic=13397
  - fixed few typos
  - partly implemented language switcher, not yet usable
  - restructuring, optimizing and commenting of nearly all code in MangAdmin.lua
  - added hooking function: GetValueCallHandler
  - added function ordering list, to garantee that functions added in the future, 
    using the same .getvalue request are handled in the right order
  - sorry the fly mode button does only deactivate fly mode if you are flying, this will be fixed later