@@ -19,6 +19,10 @@
 
 =CHANGELOG=
 
+Rev. 11:
+  - added romania translation, thanks to x_ray
+  - updated finnish translation, by Lone
+
 Rev. 10:
   - added lithuania translation, thanks to visagalis
 
